# GoF_cpp

./: .pullapprove.yml  .travis.yml  CMakeLists.txt  README.md
cmake/: clang.cmake  cppcheck.cmake
src/: CMakeLists.txt
src/corona10/: README.md  abstract_factory.cpp  abstract_factory.hpp  adaptor_pattern.hpp  buffered_reader.cpp  buffered_reader.hpp  command.cpp  command.hpp  decorator.cpp  decorator.hpp
tests/: CMakeLists.txt  test_corona10.cpp  test_corona10_abstract_factory.cpp  test_corona10_adaptor_pattern.cpp  test_corona10_buffered_reader.cpp  test_corona10_command.cpp  test_corona10_decorator.cpp
